 * AddAmmo now automatically unselects weapon if it would remove current ammo from current hedgehog
 * Fix call: SetWeapon(amNothing) now unselects weapon
 * Fix call: SetWind did not update flake flying direction
 * Fix global: TotalRounds was stuck at -1 for several turns

====================== 0.9.23 ======================
HIGHLIGHTS:
 + Battalion style
 + Fort mode is now a map type instead of a scheme setting
 + Fort mode now works with more than 2 teams
 + New weapon: rubber duck
 + New theme, map, 3 forts, 3 missions, some hats and graves
 + WxW style allows you to select one of many wall sets
 + Complete HedgeEditor overhaul
 + Greatly improved script parameter support for many styles
 + Improves stats screen of most styles and missions
 + Various improvements for almost all styles
 + AI hedgehogs can now use Bee, Vamprism, and Time Box
 + Campaign page now shows your progress
 + Improved turn timer
 + Improved randomization options in team and multiplayer pages
 + Improved theme customization support
 + Various Lua API additions
 * Fix cursor often jumping around after clicking
 * A huge amount of bugfixes for both campaigns, the missions and styles
 * Video recording functionality is restored

Content:
 + New game-style/mode: Battalion (see https://hedgewars.org/wiki/Battalion )
 + New theme: Beach
 + New theme music for Jungle and Fruit themes
 + Change SD theme music for Halloween and Hoggywood (old tracks)
 + Completely new Cheese map; replaces the old one
 + New forts: Lonely_Island, Octopus, Olympic, Snail
 + Many new random hedgehog and team names
 + Add hats: barrelhider, bishop, jester, leprechaun, pirate_eyepatch, tf_scout, zoo_octopus
 + Add hair-less variants of old hats: beefeaterhat, lambdahat, nursehat, pirate_bandana, pirate_hat, poke_ash_hat, RamboClean, sf_vega_hat, sf_guile_hat, simple_red, simple_yellow, simple_green, thugclean
 * Remove hat: tf_scount (this was a duplicate of tf_demoman)